examples/test/testpolicy13518.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13518
  namespace: namespace323
spec:
  podSelector:
    matchLabels:
      key18: value20
      key45: value10
      key40: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value2
          key23: value17
      podSelector:
        matchLabels:
          key25: value28
          key10: value33
